--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,8 @@ margin: 5px;
   .shimmer-container{
     display: flex;
   }
+  .user-card{
+    margin-top: 5px;
+    padding: 10px;
+    border: 1px solid black;
+  }
